# VitaKodiRemote

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: Config.cmake  Dependencies.cmake  Files.cmake  Vita3K.cmake  VitaMaterialKit.cmake
src/: main.cpp
src/app/: Ui.cpp  Ui.hh  Utils.cpp  Utils.hh
src/app/utils/: Config.cpp  Config.hh  Request.cpp  Request.hh
src/app/utils/kodi/: Input.hh
src/app/views/: ButtonsSample.cpp  ButtonsSample.hh  CardsSample.cpp  CardsSample.hh  CheckboxesSample.cpp  CheckboxesSample.hh  I18nSample.cpp  I18nSample.hh  IconsSample.cpp  IconsSample.hh  Settings.cpp  Settings.hh  TextFieldsSample.cpp  TextFieldsSample.hh  TextsSample.cpp  TextsSample.hh  Welcome.cpp  Welcome.hh
src/kit/: Changelog.md  README.md
src/kit/core/: App.cpp  App.hh  EventUi.cpp  EventUi.hh  View.hh  ViewsController.hh
src/kit/ui/: UiButtons.hh  UiCards.hh  UiCheckboxes.cpp  UiCheckboxes.hh  UiRadioBoxes.cpp  UiRadioBoxes.hh  UiTextFields.hh
src/kit/ui/parent/: UiParentBoxes.hh
src/kit/utils/: Screen.hh  UtilsI18n.cpp  UtilsIME.hh
